# malachite

./: .clippy.toml  .dockerignore  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  AGENTS.md  APPS.md  ARCHITECTURE.md  BREAKING_CHANGES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CODE.md  FAQ.md  GLOSSARY.md  LEARNING_PATH  MAINTAINERS.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  cliff.toml  codecov.yml  docs-add-glossary  typos.toml
Code/itf/: Cargo.toml
Code/itf/fixtures/: 0DecideNonProposerTest.itf.json
Code/itf/src/: consensus.rs  deserializers.rs  lib.rs  mbt.rs  types.rs  votekeeper.rs
Code/itf/tests/: consensus.rs  decide_non_proposer.rs  votekeeper.rs
Code/itf/tests/consensus/: runner.rs  utils.rs
Code/itf/tests/fixtures/: DecideNonProposerTest0.itf.json  votekeeper.itf.json
Code/itf/tests/votekeeper/: runner.rs  utils.rs
Code/itf/tests/votekeeper_utils/: mod.rs  runner.rs
Code/tendermint/: Cargo.toml
Code/tendermint/src/: ed25519.rs  lib.rs
code/: Cargo.toml  Makefile  QUESTIONS.txt  TESTING_GUIDE.md  TESTNET_SCENARIOS.md  cargo-maelstrom.toml  config.toml  docker-compose-mixed.yml  docker-compose-multi-network.yml  docker-compose-nat.yml  docker-compose.yml  rust-toolchain.toml  test.sh
code/.cargo/: config.toml
code/actors/: Cargo.toml
code/actors/src/: cal.rs  consensus.rs  faulty_node.rs  gossip.rs  gossip_mempool.rs  host.rs  lib.rs  mempool.rs  node.rs  proposal_builder.rs  timers.rs
code/actors/src/util/: make_actor.rs  mod.rs  value_builder.rs
code/actors/tests/: actor_gossip_n3f1.rs  util.rs
code/cli/: Cargo.toml
code/cli/src/: args.rs  config.rs  example.rs  init.rs  main.rs
code/cli/src/cmd/: init.rs  start.rs  testnet.rs
code/cli/src/config/: args.rs  commands.rs  file.rs  genesis.rs  serialization.rs
code/common/: Cargo.toml
code/common/src/: block_part.rs  context.rs  height.rs  lib.rs  proposal.rs  round.rs  signed_block_part.rs  signed_vote.rs  signing.rs  timeout.rs  transaction.rs  validator_set.rs  value.rs  vote.rs
code/crates/: combined_code.md
code/crates/actors/: Cargo.toml
code/crates/actors/src/: block_sync.rs  consensus.rs  gossip_consensus.rs  gossip_mempool.rs  host.rs  mempool.rs  node.rs  sync.rs  wal.rs
code/crates/actors/tests/: util.rs
code/crates/app/: Cargo.toml
code/crates/app-channel/: Cargo.toml
code/crates/app-channel/src/: actor.rs  builder.rs  channel.rs  connector.rs  lib.rs  msgs.rs  run.rs  spawn.rs  types.rs
code/crates/app/src/: lib.rs  node.rs  part_store.rs  spawn.rs
code/crates/blocksync/: Cargo.toml
code/crates/blocksync/src/: behaviour.rs  co.rs  codec.rs  handle.rs  lib.rs  macros.rs  metrics.rs  rpc.rs  state.rs  types.rs
code/crates/cli/: Cargo.toml
code/crates/cli/src/: args.rs  file.rs  logging.rs  main.rs  metrics.rs  new.rs
code/crates/common/: Cargo.toml  build.rs
code/crates/common/proto/: malachite.common.proto
code/crates/common/src/: certificate.rs  context.rs  height.rs  lib.rs  proposal.rs  proposal_part.rs  proto.rs  round.rs  signed_message.rs  signed_proposal_part.rs  timeout.rs  transaction.rs  value.rs  vote.rs  vote_set.rs
code/crates/config/: Cargo.toml
code/crates/config/src/: lib.rs  utils.rs
code/crates/consensus/: Cargo.toml
code/crates/consensus/src/: effect.rs  error.rs  full_proposal.rs  handle.rs  input.rs  (+9 more)
code/crates/core-consensus/: Cargo.toml
code/crates/core-driver/: Cargo.toml
code/crates/core-state-machine/: Cargo.toml
code/crates/core-types/: Cargo.toml
code/crates/core-votekeeper/: Cargo.toml
code/crates/discovery/: Cargo.toml  README.md
code/crates/engine/: Cargo.toml
code/crates/engine-byzantine/: Cargo.toml
code/crates/gossip-consensus/: Cargo.toml
code/crates/gossip-mempool/: Cargo.toml
code/crates/host/: Cargo.toml
code/crates/metrics/: Cargo.toml
code/crates/network/: Cargo.toml
code/crates/node/: Cargo.toml
code/crates/peer/: Cargo.toml
code/crates/proto/: Cargo.toml
code/crates/round/: Cargo.toml
code/crates/signing-ed25519/: Cargo.toml
code/crates/starknet-app/: Cargo.toml
code/crates/starknet-host/: Cargo.toml
code/crates/sync/: Cargo.toml
code/crates/test/: Cargo.toml  build.rs
code/crates/test-app/: Cargo.toml
code/crates/wal/: Cargo.toml
code/driver/: Cargo.toml
code/driver/src/: driver.rs  input.rs  output.rs  proposer.rs
code/examples/channel/: Cargo.toml  README.md  config.toml
code/examples/starknet-app/: Cargo.toml
code/gossip/: Cargo.toml
code/gossip-mempool/: Cargo.toml
code/gossip-mempool/src/: lib.rs
code/gossip/src/: actor.rs  handle.rs  lib.rs
code/itf/src/: consensus.rs  utils.rs
code/makefile-scripts/: monitor-sockets.sh  restart-validator-nodes.sh  setup-mixed-testnet.sh
code/multi-net-configs/: node0-config.toml  node1-config.toml  node2-config.toml  node3-config.toml
code/nat-configs/: node0-config.toml  node1-config.toml  node2-config.toml  node3-config.toml
code/network/src/: lib.rs  msg.rs
code/node/: Cargo.toml  peers.toml
code/node/src/: config.rs  lib.rs  network.rs  node.rs  peers.rs  proposer.rs  timers.rs  value.rs
code/node/tests/: actor_gossip_n10f0.rs  actor_gossip_n3f0.rs  actor_gossip_n3f1.rs  broadcast_n10f0.rs  broadcast_n3f0.rs  gossip_n10f0.rs  gossip_n3f0.rs  util.rs
code/proto/: Cargo.toml  build.rs
code/proto/src/: impls.rs  lib.rs  malachite.proto
code/round/src/: lib.rs  output.rs  state.rs  state_machine.rs
code/scripts/: Makefile  README.md  nohup.out  spawn-tmux.bash  spawn.bash  spawn.fish
code/single-net-configs/: node0-config.toml  node1-config.toml  node2-config.toml  node3-config.toml
code/starknet/: Cargo.toml
code/starknet/src/: lib.rs  mock.rs
code/test/: Cargo.toml
code/test/src/: address.rs  block_part.rs  context.rs  height.rs  lib.rs  proposal.rs  signing.rs  utils.rs  validator_set.rs  value.rs  vote.rs
code/test/tests/: driver.rs  driver_extra.rs  round.rs  round_votes.rs  vote_keeper.rs
code/tools/: check_rust_toolchain.sh
code/vote/src/: lib.rs  value_weights.rs
(+756 files in other folders)
