[workspace]
resolver = "2"

members = [
  "common",
  "driver", 
  "gossip",
  "itf",
  "node", 
  "proto",
  "round",
  "test",
  "vote",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
repository   = "https://github.com/informalsystems/malachite"
license      = "Apache-2.0"
publish      = false

[workspace.dependencies]
malachite-common = { version = "0.1.0", path = "common" }
malachite-driver = { version = "0.1.0", path = "driver" }
malachite-gossip = { version = "0.1.0", path = "gossip" }
malachite-itf    = { version = "0.1.0", path = "itf" }
malachite-node   = { version = "0.1.0", path = "node" }
malachite-proto  = { version = "0.1.0", path = "proto" }
malachite-round  = { version = "0.1.0", path = "round" }
malachite-test   = { version = "0.1.0", path = "test" }
malachite-vote   = { version = "0.1.0", path = "vote" }

async-trait        = "0.1.77"
derive-where       = "1.2.7"
ed25519-consensus  = "2.1.0"
futures            = "0.3"
glob               = "0.3.0"
itf                = "0.2.2"
num-bigint         = "0.4.4"
num-traits         = "0.2.17"
pretty_assertions  = "1.4"
prost              = "0.12.3"
prost-types        = "0.12.3"
prost-build        = "0.12.3"
rand               = "0.8.5"
serde              = "1.0"
serde_json         = "1.0"
serde_with         = "3.4"
sha2               = "0.10.8"
signature          = "2.1.0"
thiserror          = "1.0"
tokio              = "1.35.1"
tokio-stream       = "0.1"
toml               = "0.8.10"
turmoil            = "0.6.1"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
