[package]
name        = "malachite-itf"
description = "Library for working with ITF traces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true

[dependencies]
itf.workspace    = true
rand.workspace   = true
malachite-common = { version = "0.1.0", path = "../common" }
malachite-vote   = { version = "0.1.0", path = "../vote" }
malachite-test   = { version = "0.1.0", path = "../test" }
num-bigint       = { version = "0.4", features = ["serde"] }
rstest           = { version = "0.18.2", default-features = false }
serde            = { workspace = true, features = ["derive"] }
