[package]
name        = "malachite-itf"
description = "Library for working with ITF traces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true

[dependencies]
itf              = { workspace = true }
rand             = { workspace = true }
malachite-common = { version = "0.1.0", path = "../common" }
malachite-vote   = { version = "0.1.0", path = "../vote" }
malachite-test   = { version = "0.1.0", path = "../test" }
num-bigint       = { version = "0.4", features = ["serde"] }
serde            = { workspace = true, features = ["derive"] }
serde_with       = { version = "3.4.0" }
serde_json       = { version = "1.0.108" }
glob             = { version = "0.3.1" }

[dev-dependencies]
tempfile         = { version = "3.8.1" }
