[package]
name = "malachite-tendermint"

version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
malachite-common = { version = "0.1.0", path = "../common" }

ed25519-consensus.workspace = true
rand.workspace              = true
secrecy.workspace           = true
sha2.workspace              = true
signature.workspace         = true
tendermint.workspace        = true
