[package]
name                 = "malachite-cli"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
clap = { version = "4.5.4", features = ["env", "derive"] }
confy = "0.6.1"
malachite-actors.workspace = true
malachite-node.workspace   = true
malachite-test.workspace   = true

tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.22.0"
rand.workspace = true
