[package]
name                 = "malachite-gossip"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
libp2p             = { version = "0.53.2", features = ["macros", "mdns",  "identify", "tokio", "ed25519", "quic", "tls", "gossipsub"] }
libp2p-gossipsub   = { version = "0.46.1" }

futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
