[package]
name                 = "malachite-gossip"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
futures            = { workspace = true }
libp2p             = { workspace = true }
libp2p-gossipsub   = { workspace = true }
ractor             = { workspace = true, features = ["async-trait"] }
ractor_actors      = { workspace = true, features = ["streams"] }
tokio              = { workspace = true }
tracing            = { workspace = true }
