[package]
name = "malachite-node"
description = "Node for running the Malachite consensus engine"

version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[[bin]]
name = "malachite-node"
path = "bin/main.rs"

[features]
turmoil = ["dep:turmoil"]

[dependencies]
malachite-common.workspace = true
malachite-driver.workspace = true
malachite-round.workspace  = true
malachite-vote.workspace   = true
malachite-proto.workspace  = true
malachite-test.workspace   = true

async-trait        = { workspace = true }
ed25519-consensus  = { workspace = true, features = ["serde"] }
derive-where       = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tokio-stream       = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

turmoil            = { workspace = true, optional = true }

[dev-dependencies]
malachite-test.workspace = true
