[package]
name                 = "malachite-starknet"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true


[dependencies]
malachite-common = { path = "../common" }
malachite-test   = { path = "../test" }
malachite-proto  = { path = "../proto" }

async-trait     = { workspace = true }
futures         = { workspace = true }
rand            = { workspace = true }
rand_chacha     = { workspace = true }
sha2            = { workspace = true }
subtle-encoding = { workspace = true }
tokio           = { workspace = true, features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio        = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
