[package]
name                   = "malachite-blocksync"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common = { workspace = true }
malachite-proto  = { workspace = true }

async-trait      = { workspace = true }
derive-where     = { workspace = true }
displaydoc       = { workspace = true }
libp2p           = { workspace = true, features = ["request-response", "cbor"] }
futures-util     = { workspace = true }

[lints]
workspace = true
