[package]
name        = "malachite-common"
description = "Common datatypes and interfaces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
malachite-proto.workspace = true

derive-where.workspace = true
prost.workspace        = true
prost-types.workspace  = true
signature.workspace    = true

[build-dependencies]
prost-build.workspace = true
