[package]
name        = "malachite-common"
description = "Common datatypes and interfaces for the Malachite consensus engine"

version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[features]
peerid = ["dep:multihash"]


[dependencies]
bytes = { workspace = true, default-features = false }
derive-where = { workspace = true }
thiserror = { workspace = true, default-features = false }
multihash = { workspace = true, default-features = false, optional = true }
