[package]
name                   = "malachite-consensus"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common.workspace  = true
malachite-driver.workspace  = true
malachite-metrics.workspace = true
malachite-round.workspace   = true
malachite-vote.workspace    = true

derive-where.workspace = true
tracing.workspace      = true

[lints]
workspace = true
