[package]
name                 = "malachite-discovery"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
libp2p             = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true }
