[package]
name                 = "malachite-gossip-mempool"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
malachite-common  = { workspace = true }
malachite-metrics = { workspace = true }
malachite-proto   = { workspace = true }

futures            = { workspace = true }
libp2p             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
