[package]
name = "informalsystems-malachitebft-network"
description = "Networking layer for the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
malachitebft-discovery = { workspace = true }
malachitebft-metrics = { workspace = true }
malachitebft-peer = { workspace = true }
malachitebft-sync = { workspace = true }

bytes = { workspace = true }
either = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-broadcast = { workspace = true }
# I2P transport deps
j4-i2p-rs = { git = "https://github.com/kn0sys/j4-i2p-rs.git", tag = "v0.3.1-alpha", package = "j4-i2p-rs", optional = true }
seahash = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
# [dev-dependencies]
# multiaddr = { workspace = true }
[features]
default = []
i2p = ["j4-i2p-rs"]
