[package]
name = "malachite-peer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
rand = ["dep:rand"]
serde = ["dep:serde"]

[dependencies]
bs58 = { workspace = true }
multihash = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[lints]
workspace = true
