[package]
name                   = "malachite-signing-ed25519"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common  = { workspace = true }

rand              = { workspace = true }
serde             = { workspace = true }
signature         = { workspace = true }
ed25519-consensus = { workspace = true }
sha3              = { workspace = true }
base64            = { workspace = true }

[lints]
workspace = true
