[package]
name                   = "malachite-signing-ed25519"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[features]
serde = ["dep:serde", "dep:base64"]

[dependencies]
malachite-common  = { workspace = true }

rand              = { workspace = true }
signature         = { workspace = true }
ed25519-consensus = { workspace = true }
sha3              = { workspace = true }

serde             = { workspace = true, optional = true }
base64            = { workspace = true, optional = true }

[lints]
workspace = true
