[package]
name                   = "malachite-starknet-host"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common.workspace = true
malachite-test.workspace   = true
malachite-proto.workspace  = true

async-trait.workspace     = true
subtle-encoding.workspace = true
tokio.workspace           = true

[lints]
workspace = true
