[package]
name = "malachite-wal"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "wal"
harness = false

[dependencies]
advisory-lock = "0.3.0"
bytes = "1.5.0"
crc32fast = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"
nix = { version = "0.29.0", features = ["signal"] }
rand = "0.8.5"
tempfile = "3.14.0"
testdir = "0.9.1"
