[package]
name                 = "starknet-app"
version.workspace    = true
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
malachite-cli.workspace           = true
malachite-config.workspace        = true

# Starknet
malachite-starknet-app.workspace  = true

color-eyre         = { workspace = true }
tracing            = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, features = ["background_threads"] }

[dev-dependencies]
tempfile           = { workspace = true }
