[package]
name                   = "malachite-starknet-host"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
bytes            = { workspace = true, features = ["serde"] }

malachite-actors.workspace             = true
malachite-blocksync.workspace          = true
malachite-common.workspace             = true
malachite-metrics.workspace            = true
malachite-node.workspace               = true
malachite-gossip-mempool.workspace     = true
malachite-proto.workspace              = true
malachite-starknet-p2p-types.workspace = true

starknet-core.workspace   = true
async-trait.workspace     = true
bytesize.workspace        = true
derive-where.workspace    = true
eyre.workspace            = true
ractor.workspace          = true
rand.workspace            = true
sha3.workspace            = true
tokio.workspace           = true
tracing.workspace         = true

[lints]
workspace = true
