[package]
name                   = "starknet-p2p-types"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common.workspace   = true
malachite-proto.workspace    = true
starknet-p2p-proto.workspace = true
malachite-crypto             = { workspace = true, features = ["ed25519"] }

hex.workspace   = true
sha2.workspace  = true
serde.workspace = true
starknet-core.workspace = true

[lints]
workspace = true
