[package]
name = "arc-malachitebft-test-store"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
malachitebft-app-channel.workspace = true
malachitebft-proto.workspace = true
malachitebft-test.workspace = true
malachitebft-test-streaming.workspace = true

bytes.workspace = true
prost.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
