[package]
name = "arc-malachitebft-test-streaming"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
malachitebft-app-channel.workspace = true
malachitebft-test.workspace = true

serde.workspace = true

[lints]
workspace = true
